// @flow

import React from 'react';
import { shallow } from 'enzyme';
import App from './App';

test('should render without crashing', () => {
  const wrapper = shallow(<App />);
  expect(wrapper).toMatchSnapshot();
});

test('left paddle should move up if W is down', () => {
  const wrapper = shallow(<App />);
  const leftPaddle = wrapper.find('#left-paddle').first();
  const event = { keyCode: 87 };

  const y0 = leftPaddle.props().y;

  wrapper.simulate('keydown', event);

  expect(wrapper.state().leftPaddle.y).toBe(y0 - wrapper.instance().speed);
  expect(wrapper).toMatchSnapshot();
});

test('left paddle should move down if S is down', () => {
  const wrapper = shallow(<App />);
  const leftPaddle = wrapper.find('#left-paddle').first();
  const event = { keyCode: 83 };

  const y0 = leftPaddle.props().y;

  wrapper.simulate('keydown', event);

  expect(wrapper.state().leftPaddle.y).toBe(y0 + wrapper.instance().speed);
  expect(wrapper).toMatchSnapshot();
});

test('nothing should happen if any other key is down', () => {
  const wrapper = shallow(<App />);
  const event = { keyCode: -1 };

  wrapper.simulate('keydown', event);

  expect(wrapper).toMatchSnapshot();
});
